# otorchmizer

./: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  regular-issue.md
.github/workflows/: build-publish-to-pypi.yml  tests.yml
benchmarks/: results.json
docs/: MIGRATION_GUIDE.md  conf.py  index.rst
docs/api/: otorchmizer.core.agent_view.rst  otorchmizer.core.block.rst  otorchmizer.core.device.rst  otorchmizer.core.function.rst  otorchmizer.core.node.rst  otorchmizer.core.optimizer.rst  otorchmizer.core.population.rst  otorchmizer.core.rst  otorchmizer.core.space.rst  otorchmizer.functions.constrained.rst  otorchmizer.functions.multi_objective.rst  otorchmizer.functions.rst  otorchmizer.math.distribution.rst  otorchmizer.math.general.rst  otorchmizer.math.hyper.rst  otorchmizer.math.random.rst  otorchmizer.math.rst  otorchmizer.optimizers.boolean.boolean.rst  otorchmizer.optimizers.boolean.rst  otorchmizer.optimizers.evolutionary.bsa.rst  otorchmizer.optimizers.evolutionary.de.rst  otorchmizer.optimizers.evolutionary.ep.rst  otorchmizer.optimizers.evolutionary.es.rst  otorchmizer.optimizers.evolutionary.foa.rst  otorchmizer.optimizers.evolutionary.ga.rst  otorchmizer.optimizers.evolutionary.hs.rst  otorchmizer.optimizers.evolutionary.iwo.rst  otorchmizer.optimizers.evolutionary.rra.rst  otorchmizer.optimizers.evolutionary.rst  otorchmizer.optimizers.misc.aoa.rst  otorchmizer.optimizers.misc.cem.rst  otorchmizer.optimizers.misc.doa.rst  otorchmizer.optimizers.misc.gs.rst  otorchmizer.optimizers.misc.hc.rst  otorchmizer.optimizers.misc.rst  otorchmizer.optimizers.population.aeo.rst  otorchmizer.optimizers.population.ao.rst  otorchmizer.optimizers.population.coa.rst  otorchmizer.optimizers.population.epo.rst  otorchmizer.optimizers.population.gco.rst  (+68 more)
examples/applications/gpu/: gpu_optimization.py  multi_gpu_optimization.py  torch_compile_optimization.py
examples/applications/single_objective/: boolean_optimization.py  ga_rosenbrock.py  rastrigin_optimization.py  standard_optimization.py
examples/core/: create_function.py  create_population.py  create_space.py
examples/math/: create_random.py
examples/optimizers/boolean/: create_various.py
examples/optimizers/evolutionary/: create_ga.py  create_various.py
examples/optimizers/misc/: create_various.py
examples/optimizers/population/: create_various.py
examples/optimizers/science/: create_various.py
examples/optimizers/social/: create_various.py
examples/optimizers/swarm/: create_fa.py  create_pso.py  create_various.py  create_woa.py
otorchmizer/: __init__.py  otorchmizer.py
otorchmizer/core/: __init__.py  agent_view.py  block.py  device.py  function.py  node.py  optimizer.py  population.py  space.py
otorchmizer/functions/: __init__.py  constrained.py
otorchmizer/functions/multi_objective/: __init__.py  (+2 more)
otorchmizer/math/: __init__.py  distribution.py  general.py  hyper.py  random.py
otorchmizer/optimizers/: __init__.py
otorchmizer/spaces/: __init__.py  boolean.py  graph.py  grid.py  hyper_complex.py  pareto.py  search.py  tree.py
otorchmizer/utils/: callback.py  constant.py  exception.py  history.py  logging.py
otorchmizer/visualization/: __init__.py  convergence.py  surface.py
report/: REPORT.md
report/benchmarks/: plot_results.py  results_extended.json  run_benchmarks.py
tests/otorchmizer/: test_integration.py  test_regressions.py
(+83 files in other folders)
