[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otorchmizer"
version = "1.0.0"
description = "A PyTorch-based library for nature-inspired meta-heuristic optimization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Gustavo Rosa", email = "gustavo.rosa@unesp.br"},
]
keywords = ["optimization", "meta-heuristic", "pytorch", "gpu", "nature-inspired"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "networkx>=2.8",
    "tqdm>=4.60.0",
    "dill>=0.3.6",
]

[project.urls]
Homepage = "https://github.com/gugarosa/otorchmizer"
Documentation = "https://otorchmizer.readthedocs.io"
Repository = "https://github.com/gugarosa/otorchmizer"
"Bug Tracker" = "https://github.com/gugarosa/otorchmizer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "coverage>=6.0",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmarks",
    "gpu: marks tests that require a GPU",
    "multigpu: marks tests that require multiple GPUs",
]
